--- a/Elbrus/EmployeeWindow.axaml
+++ b/Elbrus/EmployeeWindow.axaml
@@ -5,7 +5,8 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
         x:Class="Elbrus.EmployeeWindow"
         Title="Сотрудник"
-        xmlns:vm="using:Elbrus.Models">
+        xmlns:vm="using:Elbrus.Models"
+		Icon="Icon/icon.png">
 
 	<ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
 		<StackPanel Margin="10">
